--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
 	"useTabs": true,
+	"htmlWhitespaceSensitivity": "ignore",
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
